# football-analytic

./: .gitignore  C0AE6710  football.ipynb  main.py  new.ipynb  pyproject.toml  requirements.txt
