[project]
name = "football-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cloudscraper>=1.2.71",
    "datafc>=1.5.0",
    "html5lib>=1.1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "requests>=2.32.5",
    "seleniumbase>=4.45.13",
    "xlsxwriter>=3.2.9",
]
